[tool.poetry]
name = "advent2020"
version = "0.0.0"
description = "Advent of code 2020"
authors = ["Thomas Burgess <<nxpnsv@gmail.com>>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
